Fix changes to downloads page and rework acrylic styling.  Fix downloads settings changes. Fix launching dialog spacing.

--- a/config/client/scrollbars/hide.css
+++ b/config/client/scrollbars/hide.css
@@ -2,8 +2,10 @@
 :root {
   --option-display-scrollbars: 0px;
   --option-navbar-position: absolute;
+  --option-downloads-position: absolute;
   --option-navbar-margin: 32px;
   --option-playbar-margin: 48px;
+  --option-downloads-margin: 200px;
   --option-controls-background: transparent;
   --option-playbar-background: transparent;
   --option-playbar-filter: none;
