--- a/config/client/scrollbars/show.css
+++ b/config/client/scrollbars/show.css
@@ -2,8 +2,10 @@
 :root {
   --option-display-scrollbars: 16px;
   --option-navbar-position: relative;
+  --option-downloads-position: relative;
   --option-navbar-margin: 0px;
   --option-playbar-margin: 0px;
+  --option-downloads-margin: 0px;
   --option-controls-background: var(--color-acrylic);
   --option-playbar-background: var(--color-acrylic-focus-window);
   --option-playbar-filter: blur(var(--blur-radius));
