--- a/css/dialog/dialog.css
+++ b/css/dialog/dialog.css
@@ -72,6 +72,7 @@
 
 .roleList .DialogBody {
   gap: 0px !important;
+  padding: 0px !important;
 }
 
 .ModalDialogPopup .DialogInnerBody {
