--- a/css/dialog/launching.css
+++ b/css/dialog/launching.css
@@ -5,7 +5,8 @@
 
 ._1ONMa3won-P2Oau-Pa97x8 {
   margin: 0px !important;
-  padding-bottom: 16px !important;
+  /* padding-bottom: 16px !important; */
+  padding: 16px !important;
 }
 
 .A9SsSJPmvetUueLvpmCXH {}
@@ -51,4 +52,17 @@
 ._1_1gXneI2QlOdyXMqiCZJx {
   padding: 0px 16px !important;
   line-height: 32px !important;
+}
+
+._1_1gXneI2QlOdyXMqiCZJx.DialogButton {
+  margin-top: auto !important;
+}
+
+/* ICON */
+._1dg8hJMsAYISbeQUxcCJcv {
+  padding: 0px !important;
+}
+
+._1ONMa3won-P2Oau-Pa97x8 ._1dg8hJMsAYISbeQUxcCJcv:not(._2F4PcO4yl7Xl5emuGiF2La) {
+  margin-left: 0px !important;
 }
