--- a/css/settings/settings.css
+++ b/css/settings/settings.css
@@ -754,6 +754,12 @@ div:not(:first-child) > .DialogSubHeader {
   margin: 0px !important;
 }
 
+/* DOWNLOADS EXCEPTIONS */
+._3yWMUlNE_QWYXXLYK4w1JH ._1m4hl8tdIUyt1rAnE4y5ZQ {
+  align-items: flex-start !important;
+  justify-content: flex-start !important;
+}
+
 /* STORAGE */
 ._3ieNQBmzS7FqrMOF-wJCSp {
   margin: 0px !important;
@@ -2477,6 +2483,7 @@ div._1IsPTEXf7ua_4XbMa3sXyW svg {
 }
 
 ._1RCWDLVLFja1TdD1P53BMq {
+  color: rgb(var(--color-text-primary)) !important;
   font-size: var(--size-14) !important;
   padding: 0px !important;
   line-height: 32px !important;
