--- a/css/variables/options.css
+++ b/css/variables/options.css
@@ -18,8 +18,10 @@
 
   --display-scrollbars: var(--option-display-scrollbars, 0px);
   --navbar-position: var(--option-navbar-position, absolute);
+  --downloads-position: var(--option-downloads-position, absolute);
   --navbar-margin: var(--option-navbar-margin, 32px);
   --playbar-margin: var(--option-playbar-margin, 48px);
+  --downloads-margin: var(--option-downloads-margin, 200px);
   --controls-background: var(--option-controls-background, transparent);
   --playbar-background: var(--option-playbar-background, var(--color-acrylic-focus-window));
   --playbar-filter: var(--option-playbar-filter, blur(var(--blur-radius)));
